--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -247,7 +247,7 @@ ul {
 }
 
 .nav-content {
-    max-width: 1280px;
+    /*max-width: 1280px;*/
     margin: 0 auto;
     padding: var(--spacing-md) var(--spacing-lg);
     display: flex;
